# IOC_Arm

./: .gitignore  Multi_limo  README.md  franka
IOC_Arm/: .gitignore
IOC_Arm/LQR/: README.md  Running_2dof_hardware  Running_sim.md  Running_the_5dof_hardware
IOC_Arm/SO-100-arm_original/: .gitignore
LQR/: Running_2dof_hardware  Running_complete  Running_lqr_and_Ioc_LF  Running_sim  Running_sim.md  modelfree  modelfree_acc
data/trajectories/: so100_so101_q_dq_20260206_012006.csv  so100_so101_q_dq_20260206_013156.csv
example_data/: Ek.npy  Uk.npy  record_meta.json
freemodel/: package.xml  setup.cfg  setup.py
freemodel/freemodel/: fm_follower.py  fm_leader.py  fm_offline_spsa.py  fm_pipeline.py  setup.py
freemodel_follow_logs/: follower_run.npz  follower_trajectory.csv  run_info.csv
freemodel_follow_logs/freemodel_follow_logs/: follower_trajectory.csv  goal_info.csv  run_info.csv
freemodel_follow_logs_2nd/: follower_trajectory.csv
freemodel_out/: Ek.csv  Ek.npy  Ek1.csv  Ek1.npy  Q_learned.csv  Q_learned.npy  Uk.csv  Uk.npy  Uk1.csv  Uk1.npy  history.csv  leader_start.csv  record_meta.json  result.json  result_summary.csv  spsa_history.csv
freemodel_out/freemodel_out/: Ek.csv  Ek1.csv  K_learned.csv  K_star.csv  Q_learned.csv  Uk.csv  Uk1.csv  record_meta.json  result_summary.csv  (+1 more)
jiananmodelfree/code/: fm_demo.py  fm_leader.py  fm_offline_spsa.py  package.xml  setup.py
model_free_ioc/: .gitignore  README.md  mf_learned_Q.json  run_modelfree_ioc.sh
so100_ws/: leader_state.csv  test_ioc_complete.sh
so101_ioc/: setup.cfg  setup.py
(+67 files in other folders)
