<?xml version="1.0"?>
<package format="3">
  <name>freemodel</name>
  <version>0.0.0</version>
  <description>Model-Free IOC</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
